--- a/src/AppBeacon/app/src/main/res/values-night/themes.xml
+++ b/src/AppBeacon/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.AppBeacon" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/bar</item>
+        <item name="colorPrimaryVariant">@color/bar</item>
+        <item name="background">@drawable/iconoleyenda</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,5 +13,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="Autocomplete">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/white</item>
     </style>
 </resources>
