--- a/src/AppBeacon/app/src/main/res/values/colors.xml
+++ b/src/AppBeacon/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#CBE3E6</color>
+    <color name="bar">#5f9ea0</color>
+    <color name="gris">#1F2525</color>
+
 </resources>
