--- a/src/AppBeacon/app/src/main/res/layout/login.xml
+++ b/src/AppBeacon/app/src/main/res/layout/login.xml
@@ -46,14 +46,14 @@
             android:layout_width="262dp"
             android:layout_height="61dp"
             android:layout_marginBottom="125dp"
-            android:backgroundTint="#011F37"
+            android:backgroundTint="#FFFF"
             android:elevation="10dp"
             android:fontFamily="@font/abel"
             android:text="Iniciar sesión"
             android:textAllCaps="false"
-            android:textColor="#D7E4EA"
-            android:textSize="16sp"
-            android:textStyle="normal|bold"
+            android:textColor="#5f9ea0"
+            android:textSize="20sp"
+            android:textStyle="bold"
             app:cornerRadius="7dip"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,9 +68,9 @@
             android:backgroundTint="#FFFFFF"
             android:ems="10"
             android:fontFamily="@font/abel"
-            android:inputType="textPersonName"
-            android:text="Contraseña"
+            android:hint="Contraseña"
 
+            android:inputType="textPersonName|textPassword"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textStyle="bold"
@@ -87,10 +87,11 @@
             android:ems="10"
             android:fontFamily="@font/abel"
             android:inputType="textPersonName"
-            android:text="Usuario"
+            android:hint="Usuario"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -113,18 +114,19 @@
             tools:ignore="TextContrastCheck" />
 
         <Button
+
             android:id="@+id/btnregister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="#5f9ea0"
+            android:layout_width="163dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/botonsecundario"
             android:fontFamily="@font/abel"
-            android:text="Crear cuenta"
+            android:text="Registrarse"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:cornerRadius="7dip"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion" />
     </androidx.constraintlayout.widget.ConstraintLayout>
