--- a/src/AppBeacon/app/src/main/res/layout/fragment_beacons2.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_beacons2.xml
@@ -9,65 +9,55 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/botonArrancarServicio"
+        android:id="@+id/buttonConfigurarNodo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="#5f9ea0"
-        android:elevation="15dp"
-        android:onClick="botonArrancarServicioPulsado"
-        android:text="Arrancar Servicio"
-        android:textColor="#FFFFFF"
-        app:cornerRadius="12dp"
+        android:text="Configurar Nodo"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonVerHistorial" />
 
     <Button
-        android:id="@+id/botonDetenerServicio"
+        android:id="@+id/buttonVerHistorial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="#5f9ea0"
-        android:elevation="15dp"
-        android:onClick="botonDetenerServicioPulsado"
-        android:text="Detener Servicio"
-        android:textColor="#FFFFFF"
-        app:cornerRadius="12dp"
+        android:text="Ver Historial"
+        app:layout_constraintBottom_toTopOf="@+id/buttonConfigurarNodo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/botonArrancarServicio" />
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/abel"
-        android:text="Servicio"
-        android:textColor="#013A42"
+        android:text="Mi Nodo"
         android:textSize="24sp"
-
-        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/buttonVerHistorial"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:fontFamily="@font/abel"
-        android:text="Historial de mediciones"
-        android:textColor="#013A42"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:layout_marginTop="24dp"
+        android:text="Hoy has respierado un aire de calidad:"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/botonDetenerServicio" />
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
+    <TextView
+        android:id="@+id/textViewMediaAireRespirado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="buena! , mala..."
+        app:layout_constraintEnd_toEndOf="@+id/textView30"
+        app:layout_constraintStart_toStartOf="@+id/textView30"
+        app:layout_constraintTop_toBottomOf="@+id/textView30" />
 </androidx.constraintlayout.widget.ConstraintLayout>
