--- a/src/AppBeacon/app/src/main/res/layout/fragment_mediciones.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_mediciones.xml
@@ -23,8 +23,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="200dp"
-        android:layout_height="54dp"
+        android:layout_width="215dp"
+        android:layout_height="56dp"
         android:layout_marginTop="45dp"
         android:background="#FFFFFF"
         android:backgroundTint="#FFFFFF"
@@ -45,9 +45,10 @@
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteTextView2"
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#FFFFFF"
+                android:completionThreshold="1"
                 android:inputType="none"
                 android:paddingTop="16dp"
                 android:paddingBottom="16dp"
