--- a/src/AppBeacon/app/src/main/res/values/themes.xml
+++ b/src/AppBeacon/app/src/main/res/values/themes.xml
@@ -18,6 +18,12 @@
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/white</item>
     </style>
+    <style name="Theme.AppBeacon.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.AppBeacon.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.AppBeacon.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
 </resources>
