Primera version pagina Mi nodo

--- a/src/AppBeacon/app/src/main/res/layout/fragment_mediciones.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_mediciones.xml
@@ -37,7 +37,7 @@
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#FFFFFF"
             android:visibility="visible"
             app:hintTextColor="#FFFF">
