--- a/src/AppBeacon/app/src/main/res/layout/card_notificaciones.xml
+++ b/src/AppBeacon/app/src/main/res/layout/card_notificaciones.xml
@@ -43,7 +43,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
                 android:layout_toEndOf="@+id/iconNoti"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="Nivel de batería bajo"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
@@ -57,10 +57,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/iconNoti"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="Hace 2 horas"
                 android:textColor="#FFFFFF"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
