--- a/src/AppBeacon/app/src/main/res/layout/fragment_user.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_user.xml
@@ -32,7 +32,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="30dp"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="Nombre de usuario:"
                 android:textColor="#36696A"
                 android:textSize="18sp"
@@ -46,7 +46,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="30dp"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="Edad:"
                 android:textColor="#36696A"
                 android:textSize="18sp"
@@ -60,7 +60,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="40dp"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="Correo:"
                 android:textColor="#36696A"
                 android:textSize="18sp"
@@ -68,16 +68,16 @@
 
             <Button
                 android:id="@+id/loginButton"
-                android:layout_width="167dp"
-                android:layout_height="wrap_content"
+                android:layout_width="189dp"
+                android:layout_height="58dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="74dp"
-                android:layout_marginEnd="77dp"
-                android:layout_marginBottom="39dp"
+                android:layout_marginStart="68dp"
+                android:layout_marginEnd="65dp"
+                android:layout_marginBottom="40dp"
                 android:backgroundTint="#5f9ea0"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:shadowRadius="3"
                 android:text="Editar información"
                 android:textAllCaps="false"
@@ -93,7 +93,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="User123"
                 android:textColor="#5f9ea0"
                 android:textSize="16sp" />
@@ -106,7 +106,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text="29 años"
                 android:textColor="#5f9ea0"
                 android:textSize="16sp" />
@@ -119,7 +119,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/abel"
+                android:fontFamily="@font/montserrat"
                 android:text=" usuario@correo.com"
                 android:textColor="#5f9ea0"
                 android:textSize="16sp" />
@@ -144,7 +144,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="29dp"
             android:layout_marginBottom="56dp"
-            android:fontFamily="@font/abel"
+            android:fontFamily="@font/montserrat"
             android:text="Nombre de usuario"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
