--- a/src/AppBeacon/app/src/main/res/layout/popupgas.xml
+++ b/src/AppBeacon/app/src/main/res/layout/popupgas.xml
@@ -33,7 +33,7 @@
             android:layout_height="57dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:fontFamily="@font/abel"
+            android:fontFamily="@font/montserrat"
             android:gravity="center"
             android:text="Leyenda mapa"
             android:textColor="#FFFFFF"
@@ -57,7 +57,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_toEndOf="@+id/imageView7"
-            android:fontFamily="@font/abel"
+            android:fontFamily="@font/montserrat"
             android:text="El nivel no es perjudicial para la salud."
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
@@ -80,7 +80,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="35dp"
             android:layout_toEndOf="@+id/imageView9"
-            android:fontFamily="@font/abel"
+            android:fontFamily="@font/montserrat"
             android:text="Nivel que se acerca al límite recomendable."
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
@@ -103,7 +103,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="30dp"
             android:layout_toEndOf="@+id/imageView10"
-            android:fontFamily="@font/abel"
+            android:fontFamily="@font/montserrat"
             android:text="Niveles que sobrepasan el límite recomendado. Perjudicial para la salud."
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
